fixed alignment in the card container and stats container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     background: url("../images/brown-stripes.jpg");
     background-size: cover;
@@ -29,14 +27,6 @@ header {
     text-align: center;
 }
 
-.stats-container2 {
-    display: none;
-}
-
-.stats-row2{
-    display: none;
-}
-
 .stats-container {
     background-color: #2f7bd3;
     padding: 10px;
@@ -49,27 +39,26 @@ header {
     height: 300px;
 }
 
+.stats-container2 {
+    display: none;
+}
+
+.stats-row2{
+    display: none;
+}
+
 .main-container {
     padding: 5px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     width: 100%;
-}
-
-.card-front, .card-back {
-    height: 100%;
-    width: 100%;
-    position: absolute;
+    text-align: center;
 }
 
 .card-container {
     flex-basis: calc(100% / 6);
-    height: auto;
     position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
     width: 100px;
 }
 
@@ -79,6 +68,9 @@ div.container {
 }
 
 .card-front {
+    height: 100%;
+    width: 100%;
+    position: absolute;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -87,6 +79,9 @@ div.container {
 }
 
 .card-back {
+    height: 100%;
+    width: 100%;
+    position: absolute;
     background-image: url("../images/back-card.jpg");
     background-size: contain;
     background-repeat: no-repeat;
@@ -144,6 +139,29 @@ p {
     border: 2px #2860CE;
     border-radius: 5px;
     border-style: outset;
+}
+
+@media (min-width: 769px){
+    header {
+        font-size: 80px;
+        text-align: center;
+        color: #2f7bd3;
+        text-shadow: 2px 5px #2860CE;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    .stats-container {
+        margin: 48px 20px;
+    }
+    .main-container {
+        margin-left: 2vw;
+    }
+    .card-front {
+        margin: 2px;
+    }
+    .card-back {
+        margin: 2px;
+    }
 }
 
 @media (max-width: 768px){
